--- a/src/plugins/_api/messageDecorations/style.css
+++ b/src/plugins/_api/messageDecorations/style.css
@@ -1,18 +1,11 @@
 .vc-message-decorations-wrapper {
     display: inline-flex;
     align-items: center;
-    justify-content: center;
     gap: 0.25em;
+    vertical-align: middle;
 }
 
 .vc-message-decorations-wrapper:not(:empty) {
     /* Margin to match default Discord decorators */
     margin-left: 0.25em;
-
-    /* Align vertically */
-    position: relative;
-    vertical-align: top;
-    top: 0.1rem;
-    height: calc(1rem + 4px);
-    max-height: calc(1rem + 4px)
 }
